2003-02-13  Patrick Doyle  <wpd@delcomsys.com>
	* src/cerfpda_misc.c: Replaced explicit prototype of memset with
	#include <string.h>.

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* src/cerfpda_misc.c: Fixed warning.

2002-05-07  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_arm_sa11x0_cerfpda.cdl: 
	Standardize CYGNUM_HAL_VIRTUAL_VECTOR_CONSOLE_CHANNEL_DEFAULT usage.

2002-05-01  Gary Thomas  <gthomas@redhat.com>

	* include/plf_mmap.h: Fix mapping macros (I/O region).

2002-04-16  Gary Thomas  <gthomas@redhat.com>

	* src/cerfpda_misc.c (hal_mmu_init): Add unmapped DRAM.

2002-02-05  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_arm_sa11x0_cerfpda.cdl: Add product info for RedBoot.

2002-02-04  Gary Thomas  <gthomas@redhat.com>

	* src/lcd_support.c: 
	* src/cerfpda_misc.c: 
	* src/banner.xpm: 
	* misc/redhat2.xpm: 
	* misc/redhat.xpm: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAM.ecm: 
	* misc/redboot.xpm: 
	* misc/logo.xpm: 
	* misc/lcd_test.c: 
	* misc/escw.xpm: 
	* misc/eCos2.xpm: 
	* misc/eCos.xpm: 
	* include/pkgconf/mlt_arm_sa11x0_cerfpda_rom.mlt: 
	* include/pkgconf/mlt_arm_sa11x0_cerfpda_rom.ldi: 
	* include/pkgconf/mlt_arm_sa11x0_cerfpda_rom.h: 
	* include/pkgconf/mlt_arm_sa11x0_cerfpda_ram.mlt: 
	* include/pkgconf/mlt_arm_sa11x0_cerfpda_ram.ldi: 
	* include/pkgconf/mlt_arm_sa11x0_cerfpda_ram.h: 
	* include/plf_mmap.h: 
	* include/plf_io.h: 
	* include/hal_platform_setup.h: 
	* include/cerfpda.h: 
	* cdl/hal_arm_sa11x0_cerfpda.cdl: New file(s) - port to CerfPDA.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free